force-app/main/default/objects/Stage_Objective__c/Stage_Objective__c.object-meta.xml
<CustomObject>
    <label>SP Objective</label>
    <nameField>
        <label>SP Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SP Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>