force-app/main/default/objects/Stage_Objective__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <type>TextArea</type>
</CustomField>