force-app/main/default/objects/Stage_Objective__c/fields/Advancement_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Advancement_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advancement Criteria</label>
    <type>Checkbox</type>
</CustomField>