force-app/main/default/objects/Stage_Objective__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Admin note explaining this Objective (not shown in interface)</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>