force-app/main/default/objects/Stage_Objective__c/fields/Field_Set__c.field-meta.xml
<CustomField>
    <fullName>Field_Set__c</fullName>
    <inlineHelpText>Used to display custom fields for this SPI Objective. MUST match the API Name of a Opportunity Field Set</inlineHelpText>
    <label>Field Set</label>
    <length>100</length>
    <type>Text</type>
</CustomField>