force-app/main/default/objects/Stage_Objective__c/fields/Objective_ID__c.field-meta.xml
<CustomField>
    <fullName>Objective_ID__c</fullName>
    <externalId>true</externalId>
    <label>Objective ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>