force-app/main/default/objects/Stage_Objective__c/fields/Opportunity_Order_SubType__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Order_SubType__c</fullName>
    <label>Opportunity Order SubType</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AddOn</fullName>
            </value>
            <value>
                <fullName>Annual Increase</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Data Clean-Up</fullName>
            </value>
            <value>
                <fullName>Decommission</fullName>
            </value>
            <value>
                <fullName>Evergreen Renewal</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Frictionless</fullName>
            </value>
            <value>
                <fullName>Full Cancellation</fullName>
            </value>
            <value>
                <fullName>Increase</fullName>
            </value>
            <value>
                <fullName>License Compliance</fullName>
            </value>
            <value>
                <fullName>License Transfer</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Non-Payment/ROS</fullName>
            </value>
            <value>
                <fullName>Perpetual to SaaS</fullName>
            </value>
            <value>
                <fullName>Perpetual to Term</fullName>
            </value>
            <value>
                <fullName>Prior Customer</fullName>
            </value>
            <value>
                <fullName>Prof to EE</fullName>
            </value>
            <value>
                <fullName>Reduction</fullName>
            </value>
            <value>
                <fullName>Reinstatement</fullName>
            </value>
            <value>
                <fullName>Renewal w. Addon</fullName>
            </value>
            <value>
                <fullName>Renewal w. Migration</fullName>
            </value>
            <value>
                <fullName>Renewal w. Upsell</fullName>
            </value>
            <value>
                <fullName>Sales Reversal</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Term to SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>