force-app/main/default/objects/Stage_Objective__c/fields/Opportunity_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Order_Type__c</fullName>
    <label>Opportunity Order Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AddOn</fullName>
            </value>
            <value>
                <fullName>Annual Increase Within Term</fullName>
            </value>
            <value>
                <fullName>Auto Renewal With Increase</fullName>
            </value>
            <value>
                <fullName>Auto Renewal Without Increase</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>Contract Renewal</fullName>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Data Clean-Up</fullName>
            </value>
            <value>
                <fullName>Decommission</fullName>
            </value>
            <value>
                <fullName>Eval</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New Services</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Renewal Within Term (No Increase)</fullName>
            </value>
            <value>
                <fullName>Subscription</fullName>
            </value>
            <value>
                <fullName>Subscription Renewal</fullName>
            </value>
            <value>
                <fullName>Term License</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>