force-app/main/default/objects/Stage_Objective__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <label>Opportunity Record Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CNR Sales</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>Eval</fullName>
            </value>
            <value>
                <fullName>Fast Track</fullName>
            </value>
            <value>
                <fullName>FleetRisk Advisors</fullName>
            </value>
            <value>
                <fullName>GSS Opportunity</fullName>
            </value>
            <value>
                <fullName>Indirect (Partner)</fullName>
            </value>
            <value>
                <fullName>Partner Opportunity (Reseller)</fullName>
            </value>
            <value>
                <fullName>Products, Services and Maintenance</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Services Only</fullName>
            </value>
            <value>
                <fullName>Sylectus Opportunity</fullName>
            </value>
            <value>
                <fullName>Transportation &amp; Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>