force-app/main/default/objects/Stage_Objective__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Opportunity Stage this Objective is related to. Required Actions cannot leave this Stage unless they have been completed.</inlineHelpText>
    <label>Opportunity Stage</label>
    <referenceTo>Opportunity_Stage__c</referenceTo>
    <relationshipName>Stage_Objective</relationshipName>
    <type>Lookup</type>
</CustomField>