force-app/main/default/objects/Stage_Objective__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <inlineHelpText>Order # of this Objective.</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>