force-app/main/default/objects/Stage_Objective__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Opportunity_Order_Type__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Opportunity_Order_SubType__c</columns>
    <columns>Order__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>